--- a/styles.css
+++ b/styles.css
@@ -69,18 +69,36 @@ main{
     max-width: 592px;
     margin-top:100px;
     border-radius:20px;
-    box-shadow: 7px 5px 0px light-dark(black, white);
-    border: 4px solid light-dark(black, white);
-    display: flex;
+    box-shadow: 7px 5px 0px light-dark(black, rgb(177, 177, 177));
+    border: 4px solid light-dark(black, rgb(177, 177, 177));
     font-family: 'Montserrat';
     font-size: 1.5rem;
     padding: 20px;
     font-weight: 600;
-    /* usar display grid */
+    display: grid;
+    grid-template-columns: 2fr 3fr 1fr;
+    grid-template-rows:repeat(auto-fit, 50px);
 
     & > div {
+        display: flex;
+        align-items: center;
         text-transform: uppercase;
-        width: 33.3333%;
+        outline:1px solid white;
+    }
+}
+
+#add-player-row{
+    grid-column:span 3;
+
+    & button {
+        width: 10%;
+        height: 100%;
+        cursor: pointer;
+    }
+
+    & input {
+        height: 100%;
+        font-size: 30px;
     }
 }
 
