--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,109 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-:root{
-    color-scheme: dark;
+:root {
+  color-scheme: dark;
 
-    --txt-light: black;
-    --txt-dark: white;
-    --bg-light: white;
-    --bg-dark: black;
-}
-
-@font-face {
-    font-family: 'Libertinus';
-    src: url("./fonts/Libertinus_Keyboard/LibertinusKeyboard-Regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+  --txt-light: black;
+  --txt-dark: white;
+  --bg-light: white;
+  --bg-dark: black;
 }
 
 @font-face {
-    font-family: 'Montserrat';
-    src: url("./fonts/Montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Libertinus";
+  src: url("./fonts/Libertinus_Keyboard/LibertinusKeyboard-Regular.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-body{
-    margin:0;
-    max-width: 100vw;
-    overflow-x: hidden;
+@font-face {
+  font-family: "Montserrat";
+  src: url("./fonts/Montserrat/Montserrat-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-h1{
-    font-family: 'Libertinus', sans-serif;
-    text-transform: uppercase;
-    margin:0;
+body {
+  margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
-.txt{
-    color:light-dark(var(--txt-light), var(--txt-dark));
+h1 {
+  font-family: "Libertinus", sans-serif;
+  text-transform: uppercase;
+  margin: 0;
 }
 
-header{
-    background-color: light-dark(#BACDB0, #2D4739);
-    height: 80px;
-    width: 100vw;
+.txt {
+  color: light-dark(var(--txt-light), var(--txt-dark));
+}
+
+header {
+  background-color: light-dark(#bacdb0, #2d4739);
+  height: 80px;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+#change-theme {
+  position: absolute;
+  top: 30px;
+  right: 10px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 100px;
+}
+
+#gameboard {
+  background-color: #729b79;
+  height: 442px;
+  width: 90vw;
+  max-width: 592px;
+  margin-top: 100px;
+  border-radius: 20px;
+  box-shadow: 7px 5px 0px light-dark(black, rgb(177, 177, 177));
+  border: 4px solid light-dark(black, rgb(177, 177, 177));
+  font-family: "Montserrat";
+  font-size: 1.5rem;
+  padding: 20px;
+  font-weight: 600;
+  display: grid;
+  grid-template-columns: 2fr 3fr 1fr;
+  grid-template-rows: repeat(auto-fit, 50px);
+
+  & > div {
     display: flex;
     align-items: center;
-    justify-content:center;
-    position: relative;
+    text-transform: uppercase;
+    outline: 1px solid white;
+  }
 }
 
-#change-theme{
-    position: absolute;
-    top:30px;
-    right:10px;
-}
+#add-player-row {
+  grid-column: span 3;
 
-main{
-    display: flex;
-    justify-content: center;
-}
+  & button {
+    width: 10%;
+    height: 100%;
+    cursor: pointer;
+  }
 
-#gameboard{
-    background-color: #729B79;
-    height: 442px;
-    width: 90vw;
-    max-width: 592px;
-    margin-top:100px;
-    border-radius:20px;
-    box-shadow: 7px 5px 0px light-dark(black, rgb(177, 177, 177));
-    border: 4px solid light-dark(black, rgb(177, 177, 177));
-    font-family: 'Montserrat';
-    font-size: 1.5rem;
-    padding: 20px;
-    font-weight: 600;
-    display: grid;
-    grid-template-columns: 2fr 3fr 1fr;
-    grid-template-rows:repeat(auto-fit, 50px);
-
-    & > div {
-        display: flex;
-        align-items: center;
-        text-transform: uppercase;
-        outline:1px solid white;
-    }
-}
-
-#add-player-row{
-    grid-column:span 3;
-
-    & button {
-        width: 10%;
-        height: 100%;
-        cursor: pointer;
-    }
-
-    & input {
-        height: 100%;
-        font-size: 30px;
-    }
+  & input {
+    height: 100%;
+    font-size: 30px;
+  }
 }
 
 /* implementação antiga
