--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,9 @@ h1 {
   margin: 0;
 }
 
-.txt {
+/* .txt {
   color: light-dark(var(--txt-light), var(--txt-dark));
-}
+} */
 
 header {
   background-color: light-dark(#bacdb0, #2d4739);
@@ -67,10 +67,10 @@ main {
 }
 
 #gameboard {
+  color: white;
   background-color: #729b79;
   height: 442px;
-  width: 90vw;
-  max-width: 592px;
+  width: 592px;
   margin-top: 100px;
   border-radius: 20px;
   box-shadow: 7px 5px 0px light-dark(black, rgb(177, 177, 177));
@@ -82,6 +82,7 @@ main {
   display: grid;
   grid-template-columns: 2fr 3fr 1fr;
   grid-template-rows: repeat(auto-fit, 50px);
+  position: relative;
 
   & > div {
     display: flex;
@@ -103,6 +104,113 @@ main {
   & input {
     height: 100%;
     font-size: 30px;
+  }
+}
+
+button[type="button"] {
+  background: none;
+  border: none;
+  /* outline: 1px solid black; */
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: "Libertinus", sans-serif;
+  text-transform: uppercase;
+}
+
+#unshift-btn {
+  background-image: url("./images/rotate-solid-full.svg");
+  width: 25px;
+  height: 25px;
+  opacity: 0;
+  transition-property: opacity;
+  transition-duration: 300ms;
+  transition-timing-function: ease-out;
+}
+
+#players-header {
+  padding: 0 5px 0 5px;
+}
+
+#players-header:hover #unshift-btn {
+  opacity: 1;
+}
+
+.remove-button {
+  background-image: url("./images/trash-solid-full.svg") !important;
+  width: 20px;
+  height: 20px;
+  opacity: 0;
+  transition-property: opacity;
+  transition-duration: 300ms;
+  transition-timing-function: ease-out;
+}
+
+.player-name-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px 0 5px;
+}
+
+.player-name-container:hover .remove-button {
+  opacity: 1;
+}
+
+.score-button {
+  height: 80%;
+}
+
+.score-button:not(:has(img)) {
+  background-image: url("./images/question-solid-full.svg") !important;
+}
+
+#gameboard > .score-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.total-container {
+  display: flex;
+  justify-content: center;
+}
+
+#select-score {
+  background-color: #2d4739;
+  height: 150px;
+  width: 166px;
+  position: relative;
+  border-radius: 20px;
+  /* box-shadow: 7px 5px 0px light-dark(black, rgb(177, 177, 177)); */
+  border: 4px solid rgb(177, 177, 177); /* light-dark(black, rgb(177, 177, 177)); */
+
+  & #dices {
+    row-gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    overflow: hidden;
+  }
+
+  /* & #fragment {
+    --size: 15px;
+    width: var(--size);
+    height: var(--size);
+    background-color: red;
+    position: absolute;
+    transform: rotate(45deg);
+    top: calc(50% - var(--size) / 2);
+    left: -6px;
+    z-index: 1;
+  } */
+
+  & #close-select-score {
+    position: relative;
+    width: 25px;
+    height: 25px;
+    left: calc(100% - 30px);
+    top: 4px;
+    background-image: url("./images/xmark-solid-full.svg");
   }
 }
 
