--- a/styles.css
+++ b/styles.css
@@ -418,3 +418,65 @@ button[type="button"] {
     height: 200px;
   }
 }
+
+#version {
+  position: fixed;
+  bottom: 1px;
+  right: 4px;
+  font-family: "Montserrat";
+  font-size: 14px;
+  cursor: default;
+
+  &::selection {
+    background: none;
+  }
+}
+
+#toast-area {
+  position: fixed;
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 240px;
+  font-family: "Montserrat";
+}
+
+.toast {
+  background-color: light-dark(black, white);
+  color: light-dark(white, black);
+  border-radius: 15px;
+  padding: 10px;
+  display: flex;
+  text-align: center;
+  margin-bottom: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  min-height: 50px;
+  overflow-x: auto;
+  animation-name: toast-fade;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  opacity: 0;
+  position: relative;
+
+  & h3{
+    margin: 0;
+  }
+}
+
+@keyframes toast-fade {
+  0% {
+    opacity: 0;
+    top:-30px;
+  }
+
+  4% {
+    opacity: 1;
+    top: 0;
+  }
+
+  90% {
+    opacity: 1;
+  }
+}
